--- a/4 Midterm Prediction (Recommended 4)/Midterm prediction.Rmd
+++ b/4 Midterm Prediction (Recommended 4)/Midterm prediction.Rmd
@@ -2,17 +2,16 @@
 title: " "
 output:
   html_document:
-    code_folding: hide
     theme: cerulean
+    code_folding: hide
     keep_md: true
-editor_options:
-  markdown:
-    wrap: 72
+editor_options: 
+  chunk_output_type: console
 ---
 
 ### **This is why I'll Keep my Midterm Grade!**
 
-```{r message=FALSE}
+```{r , message=FALSE, warning=FALSE, echo=FALSE}
 
 library(tidyverse)
 library(DT)
@@ -22,7 +21,7 @@ library(mosaic)
 
 ```
 
-```{r message=FALSE}
+```{r , message=FALSE, warning=FALSE, echo=FALSE}
 
 datt <- read_csv("Math425PastGrades.csv")
 
@@ -74,7 +73,7 @@ dat1 <- datt %>%
 
 ```
 
-```{r include=FALSE}
+```{r , message=FALSE, warning=FALSE, echo=FALSE}
 #perfclass perfskill offih mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + perfclass + perfclass:I(Midterm) + perfclass:I(Midterm^2) + perfskill + perfskill:I(Midterm) + perfskill:I(Midterm^2) + offih + offih:I(Midterm) + offih:I(Midterm^2) + perfskill:offih + perfclass+offih + perfskill:perfclass, data = dat)
 #perfclass perfskill mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + perfclass + perfclass:I(Midterm) + perfclass:I(Midterm^2) + perfskill + perfskill:I(Midterm) + perfskill:I(Midterm^2) + perfskill:perfclass, data = dat)
 mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + I(Midterm^3)  + I(Midterm^4) + allg + allg:I(Midterm) + allg:I(Midterm^2) + allg:I(Midterm^3) + allg:I(Midterm^4), data = dat)
@@ -91,7 +90,7 @@ b <- coef(mylm)
 
 <br><br>
 
-```{r warning=FALSE, fig.align='center'}
+```{r fig.align='center', message=FALSE, warning=FALSE, echo=FALSE}
 ##almost there, need filter for 0, and lm 3
 
 prediction_interval <- predict(mylm, newdata = data.frame(Midterm = 90, allg = 1), interval = "predict")
@@ -201,7 +200,7 @@ But first things first. Let's analyze some of the aspects of our data frame. Tak
 
 <br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 finalfav <- favstats(~ FinalExam, data = dat, digits = 2)
 
 midfav <- favstats(~ Midterm, data = dat, digits = 2)
@@ -228,7 +227,7 @@ So, the Midterm is not the only variable to take in consideration. Knowing this,
 
 <br><br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 pander(summary(mylm), caption="MY Linear Model Summary")
 ```
 
@@ -247,7 +246,7 @@ $$
 
 <br><br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 prediction_interval1 <- predict(mylm, newdata = data.frame(Midterm = 90, allg = 1), interval = "predict")
 prediction_interval2 <- predict(mylm, newdata = data.frame(Midterm = 90, allg = 0), interval = "predict")
 ```
@@ -273,7 +272,7 @@ To conclude, I'll explain why I'll keep my midterm. I'll do it because it will g
 
 <br><br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + I(Midterm^3)  + I(Midterm^4) + allg + allg:I(Midterm) + allg:I(Midterm^2) + allg:I(Midterm^3) + allg:I(Midterm^4), data = dat)
 
 par(mfrow=c(1,3))
@@ -288,7 +287,7 @@ In my opinion everything looks good here with the diagnostic plots. We can see t
 
 Just as an interesting fact, take a look at my diagnostic plots before I took out observation 45. See how normality was being violated (in my opinion) and also variance didn't look so good. Then it got corrected as stated above.
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 mylm1 <- lm(FinalExam ~ Midterm + I(Midterm^2) + I(Midterm^3)  + I(Midterm^4) + allg + allg:I(Midterm) + allg:I(Midterm^2) + allg:I(Midterm^3) + allg:I(Midterm^4), data = dat1)
 
 par(mfrow=c(1,3))
@@ -307,7 +306,7 @@ This is my original data set. First I downloaded the CSV given by Br. Saunders. 
 
 <br><br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 datatable(datt)
 ```
 
@@ -321,7 +320,7 @@ Then I added two more columns (all, and allg), one counting all the 1s that one 
 
 <br><br>
 
-```{r, fig.align='center'}
+```{r, fig.align='center', message=FALSE, warning=FALSE, echo=FALSE}
 datatable(dat)
 ```
 
@@ -335,7 +334,7 @@ datatable(dat)
 
 ##### Final geom_smooth
 
-```{r, echo=F, warning=F, fig.align='center'}
+```{r, echo=F, warning=F, fig.align='center', message=FALSE}
 
 
 ggplot(dat, aes(Midterm, FinalExam, col=as.factor(allg)))+
@@ -409,7 +408,7 @@ ggplot(dat, aes(Midterm, FinalExam, col=as.factor(allg)))+
 
 ##### Pairs
 
-```{r, fig.align='center', fig.width=10, fig.height=10}
+```{r, fig.align='center', fig.width=10, fig.height=10, message=FALSE, warning=FALSE, echo=FALSE}
 pairs(dat, panel = panel.smooth, col=as.factor(dat$allg))
 ```
 
@@ -417,7 +416,7 @@ pairs(dat, panel = panel.smooth, col=as.factor(dat$allg))
 
 ##### My Test Lm's
 
-```{r, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 #perfclass perfskill offih mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + perfclass + perfclass:I(Midterm) + perfclass:I(Midterm^2) + perfskill + perfskill:I(Midterm) + perfskill:I(Midterm^2) + offih + offih:I(Midterm) + offih:I(Midterm^2) + perfskill:offih + perfclass+offih + perfskill:perfclass, data = dat)
 #perfclass perfskill mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + perfclass + perfclass:I(Midterm) + perfclass:I(Midterm^2) + perfskill + perfskill:I(Midterm) + perfskill:I(Midterm^2) + perfskill:perfclass, data = dat)
 mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + perfclass:I(Midterm) + perfclass:I(Midterm^2) + assess + skill, data = dat)
@@ -427,7 +426,7 @@ summary(mylm)
 
 ```
 
-```{r, warning=FALSE, fig.align='center'}
+```{r, warning=FALSE, fig.align='center', message=FALSE, warning=FALSE, echo=FALSE}
 ##almost there, need filter for 0, and lm 3
 
 ggplot(dat, aes(Midterm, FinalExam, col=as.factor(perfclass)))+
@@ -443,7 +442,7 @@ ggplot(dat, aes(Midterm, FinalExam, col=as.factor(perfclass)))+
 
 ##### Facet Wrap
 
-```{r, warning=FALSE, fig.align='center'}
+```{r, warning=FALSE, fig.align='center', message=FALSE, warning=FALSE, echo=FALSE}
 ##almost there, need filter for 0, and lm 3
 
 # prediction_interval <- predict(mylm, newdata = data.frame(Midterm = 88, allg = 1), interval = "confidence")
@@ -545,7 +544,7 @@ In the end I think that this one (even though it doesn't contain all possibiliti
 
 <br>
 
-```{r}
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 
 mylm <- lm(FinalExam ~ Midterm + I(Midterm^2) + I(Midterm^3)  + I(Midterm^4) + allg + allg:I(Midterm) + allg:I(Midterm^2) + allg:I(Midterm^3) + allg:I(Midterm^4), data = dat)
 summary(mylm)
